feat: route to delete refresh token
