# openapi.yaml
@@ -1,4 +1,4 @@
-openapi: 3.0.1
+openapi: 3.1.0
 info:
   title: TNBC Triple Negative Cell Segmentation 
   version: 1.0.0
@@ -115,6 +115,25 @@ paths:
                 properties:
                   accessToken:
                     type: string
+  /refreshToken/{refreshToken}:
+    delete:
+      operationId: deleteRefreshToken
+      tags:
+        - Auth
+      summary: Allow admin to delete 
+      parameters:
+        - name: refreshToken
+          in: path
+          description: refreshToken to revoke
+          required: true
+          schema:
+            type: string
+      responses:
+        '200':
+          description: OK
+      security:
+        - bearerAuth: []       
+          
 components:
   securitySchemes:
     bearerAuth:           
